--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
   "name": "pxxl",
-  "version" : "0.4.0"
+  "license":"MIT",
+  "version" : "0.4.0",
+ "main":"./dist/pxxl.min.js",
+"repository": {
+                "type": "git",
+                "url": "git@github.com:acodrst/Pxxl.js.git"
+        }
 }
