--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pxxl",
   "license":"MIT",
   "version" : "0.4.0",
- "main":"./dist/pxxl.min.js",
+ "main":"pxxl.js",
 "repository": {
                 "type": "git",
                 "url": "git@github.com:acodrst/Pxxl.js.git"
